# issue-queue

./: .gitignore  .issue.db  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  git_cli_integration.py  pyproject.toml  screenshot_tool.py  test.txt
docs/: audit_logging.rst  automation.rst  bulk_operations.rst  changelog.rst  cli_reference.rst  comments.rst  conf.py  contributing.rst  index.rst  installation.rst  json_output.rst  llm_agents.rst  quickstart.rst  web-ui.md
docs/api/: cli.rst  database.rst  models.rst  repository.rst
issuedb/: __init__.py  cli.py  database.py  date_utils.py  git_cli.py  git_repository.py  git_utils.py  models.py  ollama_client.py  repository.py  similarity.py  web.py
issuedb/data/agents/: PROMPT.txt
tests/: __init__.py  test_bulk_pattern.py  test_cli.py  test_code_refs.py  test_comments.py  test_context.py  test_database.py  test_dependencies.py  test_duplicates.py  test_enhanced_search.py  test_get_last.py  test_git_integration.py  test_models.py  test_ollama.py  test_repository.py  test_similarity.py  test_templates.py  test_time_tracking.py  test_web.py  test_workspace.py
