[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "issuedb"
version = "2.8.1"
description = "A command-line issue tracking system for software development projects"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Farshid Ashouri", email = "farsheed.ashouri@gmail.com"}
]
maintainers = [
    {name = "Farshid Ashouri", email = "farsheed.ashouri@gmail.com"}
]
keywords = ["issue tracking", "task management", "cli", "project management"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Utilities",
    "Environment :: Console",
]

[project.scripts]
issuedb-cli = "issuedb.cli:main"

[project.optional-dependencies]
web = ["flask>=2.0", "waitress>=3.0.0"]

[project.urls]
Homepage = "https://github.com/rodmena-limited/issue-queue"
Repository = "https://github.com/rodmena-limited/issue-queue"
"Bug Tracker" = "https://github.com/rodmena-limited/issue-queue/issues"

[tool.setuptools]
packages = ["issuedb", "issuedb.data", "issuedb.data.agents"]

[tool.setuptools.package-data]
issuedb = ["py.typed", "data/agents/PROMPT.txt", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.ruff]
target-version = "py38"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert statements in tests
"issuedb/web.py" = ["E501"]  # HTML templates have long lines

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
strict_optional = true
exclude = [".venv", "venv", "build", "dist"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disable_error_code = ["arg-type", "operator", "attr-defined"]

[[tool.mypy.overrides]]
module = ["pytest", "_pytest.*"]
follow_imports = "skip"
